--- a/Computer Graphics/Books/流体引擎开发(个人翻译).md
+++ b/Computer Graphics/Books/流体引擎开发(个人翻译).md
@@ -2845,3 +2845,165 @@ anim.wind = std::make_shared<ConstantVectorField3>(Vector3D(10.0, 0.0,
 
 这段代码会让风以每秒10米的速度从左向右吹动。ClassConstantVectorField3是内置的VectorField3类型之一，代码可以在**include/jet/constant_vector_field3.h** and **src/jet/ constant_vector_field3.cpp**找到。你也可以指定你自己的自定义矢量场对象来创建有趣的行为。
 
+#### 1.6.2.4 Time Integration（时间积分）
+
+​		到目前为止，我们已经计算了力。现在我们需要更新状态——位置和速度——使用我们计算出的力。在这一节的开始，**onAdvanceTimeStep** function有两个主要的块，如下所示:
+
+```c++
+voidonAdvanceTimeStep(doubletimeIntervalInSeconds)override{
+    // Compute force
+    ...
+
+	// Update states
+    for(size_t i = 0; i < numberOfPoints; ++i) {
+        // Compute new states
+        Vector3D newAcceleration = forces[i] / mass;
+        Vector3D newVelocity = ...
+        Vector3D newPosition = ...
+
+        // Update states
+        velocities[i] = newVelocity;
+        positions[i] = newPosition;
+    }
+}
+```
+
+​		现在我们要填入第二个方块。正如上面的框架代码所示，我们首先利用牛顿第二运动定律将力转换为加速度，**F=ma**。由于加速度是速度的变化率，速度是位置的变化率，所以速度是加速度的积分，位置是速度的积分。然后我们可以写出公式来计算新的速度和位置为
+$$
+v_{new} = v_{old}+\triangle t a_{new} \tag{1.70}
+$$
+以及
+$$
+x_{new} = x_{old}+\triangle t v_{new} \tag{1.71}
+$$
+​		其中Δtis为帧的时间间隔。例如，如果一辆汽车以每小时50英里的速度行驶，两小时后它就会离开100英里。如图1.49所示，这是一个通过扩展函数的导数来逼近积分的方法，它假设在给定的时间间隔内变化率是恒定的。我们使用“近似”这个术语是因为我们的时间间隔是有限的(一般是1/60秒或更短)，这意味着我们在这两者之间缺少一些信息。从图中，你可以注意到近似值与真实值之间的差距，即近似值误差。这个例子使用了线性近似，这种近似方法叫做欧拉方法。还有许多其他的方法，提高了该方法的性能。一般来说，用计算机计算积分的方法称为数值积分。由于我们是对物理量随时间积分，这个过程被称为时间数值积分。
+
+![图1.49](image/图1.49.png)
+
+**图 1.49**
+
+对于函数f(t)  f’(t)是它的时间导数。从f(t)和f‘(t)，未来值f(t+Δt)是近似的导数。实际值f(t+Δt)与f(t)+Δtf’(t)之间的差值为近似误差
+
+​		对于某些类型的问题，其解可以通过解析推导出来，这样的数值积分可能是不必要的。例如，如果一个质量点附着在一个弹簧上，那么这个点的运动可以用一个众所周知的解来描述，比如**SineWithDecayAnimation**。然而，如果系统变得复杂，没有数值方法通常是不可能得到解的。
+
+​		不管怎样，让我们回到代码。我们可以实现如下图所示的欧拉方法。
+
+```c++
+voidonAdvanceTimeStep(doubletimeIntervalInSeconds)override{
+    // Compute force
+    ...
+
+    // Update states
+    for(size_t i = 0; i < numberOfPoints; ++i) {
+        // Compute new states
+        Vector3D newAcceleration = forces[i] / mass;
+        Vector3D newVelocity
+        	= velocities[i] + timeIntervalInSeconds * newAcceleration;
+        Vector3D newPosition
+        	= positions[i] + timeIntervalInSeconds * newVelocity;
+
+        // Update states
+        velocities[i] = newVelocity;
+        positions[i] = newPosition;
+    }
+}
+```
+
+​		注意，这个欧拉方法已经在1.1节的hello-world示例中用于更新波浪的位置和速度。
+
+#### 1.6.2.5  Constraints and Collisions （约束与碰撞）
+
+​		最后一个阶段是应用约束条件。如果没有任何约束，我们目前的代码将不会创建任何有趣的动画，因为它将简单地自由落体到负无穷。事实上，图1.48所示的示例结果已经通过固定一个点的位置使用了约束。这是一个点约束，但也可以有许多其他类型的约束，如线或平面约束。详情请查看Baraff和Witkin[9]。在这个例子中，我们将实现点约束以及简单的地板碰撞。
+
+​		对于点约束，我们将在给定位置固定指定的点，并指定预定义的速度。更新后的代码如下所示:
+
+```c++
+structConstraint {
+    size_t pointIndex;
+    Vector3D fixedPosition;
+    Vector3D fixedVelocity;
+};
+std::vector<Constraint> constraints;
+
+...
+
+voidonAdvanceTimeStep(doubletimeIntervalInSeconds)override{
+    // Compute force
+    ...
+
+    // Update states
+    ...
+
+    // Apply constraints
+    for(size_t i = 0; i < constraints.size(); ++i) {
+        size_t pointIndex = constraints[i].pointIndex;
+        positions[pointIndex] = constraints[i].fixedPosition;
+        velocities[pointIndex] = constraints[i].fixedVelocity;
+    }
+
+}
+```
+
+​		修改后的类有一个约束数组，每个约束对象指定要修复的点及其状态。然后在每一帧中更新位置和速度后，通过强制指定的状态对新的位置和速度进行后处理。下面的代码显示了我们如何以零速度将系统的第一个点固定在(0,0,0)。
+
+​		现在让我们考虑碰撞。我们假设在指定的y位置有一个地板，这样点就不会落在这个高度以下。为了实现这个特征，我们需要首先检查新更新的点的位置是否低于地板。如果是这样，我们把点推到地板上。我们也可以让点在碰到地板时弹起，为了达到这个目的，我们需要在地板的法向上翻转y方向的速度。看看下面实现此逻辑的代码。
+
+```c++
+doublefloorPositionY = -7.0;
+doublerestitutionCoefficient = 0.3;
+
+...
+
+voidonAdvanceTimeStep(doubletimeIntervalInSeconds)override{
+    // Compute force
+    ...
+
+    // Update states
+    for(size_t i = 0; i < numberOfPoints; ++i) {
+        // Compute new states
+        ...
+
+        // Collision
+        if(newPosition.y < floorPositionY) {
+            newPosition.y = floorPositionY;
+
+            if(newVelocity.y < 0.0) {
+                newVelocity.y *= -restitutionCoefficient;
+                newPosition.y += timeIntervalInSeconds * newVelocity.y;
+        }
+    }
+
+    // Update states
+    ...
+    }
+
+    // Apply constraints
+    ...
+}
+```
+
+​		你可以看到，如果新的位置在地板平面以下，y位置被固定为0，y速度通过乘以恢复系数被翻转。参数恢复系数是一个值，控制多少能量将失去的点在碰撞后。如果它被设置为1，那么点将不会失去任何能量，并将做出一个完美的弹跳。如果设置为0，那么点将不会反弹，并将粘在地板上。
+
+​		我们刚刚完成了mass-spring动画解算器的构建！图1.50显示了完整的代码和测试示例，可以在src/tests/manual_tests/physics_animation_tests.cpp中找到。这是一个最简单的基于物理的动画求解器，但实际可用的模拟引擎。您可以进一步扩展此代码来模拟可变形的对象，包括布料和头发。但是正如前面提到的，这个例子的关键是制作基于物理的动画引擎的过程。我们从一个模型出发，定义了存储物理状态的数据结构，实现了力的计算，写出了如何将力转化为运动，最终实现了系统与障碍物和用户约束的交互。尽管细节可能会有所不同，但同样的想法将流入流体引擎的发展。以下部分将提供对流体动力学和模拟的基本理解，从下一章，我们将看到如何使用各种技术构建实际的流体模拟引擎。
+
+## 1.7  Fluid Animation（流体动画）
+
+​		流体运动是由不同的力和约束结合而产生的。就像质量-弹簧系统是由弹簧、阻尼和阻力控制的，也有来自观察和分析流体动力学性质的力。此外，还有限制流动自由的物理约束。例如，流体不应该失去任何质量，除非我们模拟汽化或类似的例外情况。这些力和约束因现象而异。尽管Navier-Stokes方程是描述流体动力学的方程，但主要影响因素可能是不同的，比如你看到的是一杯水与航天飞机进入大气层的情况有很大区别。
+
+​		在这本书中，我们将主要假设小到中型流体动力学作为我们的目标，在浴缸或饮水机的水平附近。这意味着时间尺度和规模尺度。我们的时间尺度是秒到分钟，而不是几天或几个月。它可以扩展到更大的范围，如从海洋中破浪，但不能扩展到天气预报的水平。我们也没有考虑任何微小的现象，比如喷墨打印机喷嘴上的一滴墨水。所以总而言之，我们的目标是创造出我们所见世界尺度的流体动画，模仿一些我们在日常生活中可以用眼睛观察到的东西。
+
+​		基于上述假设，我们得到三个主导力和一个约束条件。这包括(1)重力，(2)压力，(3)粘度作为主要驱动力，**以及密度的保持作为约束**。根据我们模拟的现象，可以添加一些内容，但这些都是最基本的部分。在这本书中，你会看到不同类型的流体模拟器采用不同的方法，但它们都有相同的想法——在密度约束下计算三种力。我将把如何编写代码的细节留给其他章节。在本章的其余部分中，我们将重点关注每个力量和约束的总体思想，以理解流体动力学，并最终获得构建流体动画引擎的想法。
+
+![图1.50](image/图1.50.png)
+
+**图 1.50**
+
+来自质量-弹簧系统仿真的框架序列。质量点链在起点水平定位，除终点外下落到地板上，终点固定在原位置。
+
+### 1.7.1 Gravity（重力）
+
+​		在人体尺度（human-scale）流体动力学中，重力是影响运动最明显、最主要的因素。它给整个流体一个均匀向下的加速度，我们可以这样写
+$$
+F_g = mg\tag{1.72}
+$$
+​		表示作用在流体上的重力，m表示部分流体的质量，以及重力常数。这与我们在质量弹簧的例子中观察到的完全相同(第1.6.2节)，而且就像前面的例子一样，除了重力之外，其他类型的力会累积，然后最终的合力f产生加速度，正如我们已经从牛顿第二运动定律中知道的那样:
