Updated Fluid Engine div

--- a/Computer Graphics/Books/流体引擎开发(个人翻译).md
+++ b/Computer Graphics/Books/流体引擎开发(个人翻译).md
@@ -2644,10 +2644,10 @@ void onAdvanceTimeStep(double timeIntervalInSeconds) override {
         // Compute new states
         Vector3D newAcceleration = forces[i] / mass;
         Vector3D newVelocity = ...
-            Vector3D newPosition = ...
-            
-            // Update states
-            velocities[i] = newVelocity;
+        Vector3D newPosition = ...
+
+        // Update states
+        velocities[i] = newVelocity;
         positions[i] = newPosition;
     }
     
@@ -2721,8 +2721,7 @@ double restLength = 1.0;
         Vector3D r = pos0 - pos1;
         double distance = r.length();
         if (distance > 0.0) {
-            Vector3D force = -stiffness * (distance - restLength) * r.
-                rmalized();
+            Vector3D force = -stiffness * (distance - restLength) * r.normalized();
             forces[pointIndex0] += force;
             forces[pointIndex1] -= force;
         }
@@ -3006,4 +3005,67 @@ voidonAdvanceTimeStep(doubletimeIntervalInSeconds)override{
 $$
 F_g = mg\tag{1.72}
 $$
-​		表示作用在流体上的重力，m表示部分流体的质量，以及重力常数。这与我们在质量弹簧的例子中观察到的完全相同(第1.6.2节)，而且就像前面的例子一样，除了重力之外，其他类型的力会累积，然后最终的合力f产生加速度，正如我们已经从牛顿第二运动定律中知道的那样:
+​		向量F~g~表示作用在流体上的重力，m表示部分流体的质量，以及重力常数。这与我们在质量弹簧的例子中观察到的完全相同(第1.6.2节)，而且就像前面的例子一样，除了重力之外，其他类型的力会累积，然后最终的合力f产生加速度，正如我们已经从牛顿第二运动定律中知道的那样:
+
+$$
+a = F/m = (F_g+...)/m\tag{1.73}
+$$
+​		向量a是流体运动的最终加速度。所以我们可以看到，同样的物理原理适用于任何地方，即使是流体。
+
+​		这里需要注意的一点是，力作用在质量为m的流体上，但由于流体是一种很容易变形的材料，每一个微小的流体部分都可以有不同的运动。因此，我们希望分数尽可能小，这样它几乎就变成了一个点。因此，在描述流体运动时，用加速度和密度代替力和质量是很常见的。这将把等式变成:
+$$
+a = g+...\tag{1.74}
+$$
+​		这个公式更加简单。根据上下文，如果更符合情况的话，这本书偶尔会使用加速度来暗示力。
+
+### 1.7.2 Pressure（压力）
+
+​		接下来，我们来谈谈压力和压力梯度力。正如我们在天气预报中经常看到的，风从高气压区吹向低气压区，同样的规则也适用于不同尺度的其他类型的流体。压力梯度力作用的另一个例子是稳定的水(例如游泳池中的水)。当你在水里越深，压力(不是压力梯度力)就越大。沿着深度的压力差产生了一个与重力相反方向的向上的力，因此，水可以保持它的状态而不收缩。图1.51更直观地展示了这些示例
+
+![图1.51](image/图1.51.png)
+
+**图 1.51**
+
+大气压力p~atm~，水密度ρ，重力g，深度h的水箱。p =ρgh+p~atm~
+
+![图1.52](image/图1.52.png)
+
+**图 1.52**
+
+一个尺寸为L×L×L的小立方体，压差为Δp。
+
+​		压力的定义是单位面积上的力，p=F/area，压力的梯度产生了梯度力。(检验第1.3.5.2节的梯度)考虑如图1.52所示大小的小立方份流体。我们假设压强只沿x轴变化。如果左右压差为Δp，则施加在方形界面上的力f为Δpl^2^(压力同样为力/面积)。由于F=ma，质量是体积乘以密度，我们可以说:
+$$
+F_p = -\triangle pl^2 = ma_p=l^3\cdot\rho\cdot a_p\tag{1.75}
+$$
+​		其中ρ和a~p~是密度和加速度。如果我们整理上面的方程，我们得到:
+
+ps: a~p~是压力带来的加速度
+$$
+a_p = -\frac{\triangle p}{\rho l}\tag{1.76}
+$$
+​		现在，如果我们尽可能地缩小这个立方体的大小，上面的方程就变成了:
+$$
+a_p = -\frac{\partial p}{\partial x}\frac{1}{\rho}\tag {1.77}
+$$
+​		⭐**这个方程想说明的是，流体的一部分加速度与沿x轴的压差成正比，与流体密度成反比。换句话说，流体在压力对比度高、密度低的情况下加速更快。将上述方程推广到三维空间，其偏导数即为梯度，如下图所示:**(Important)
+$$
+a_p = -\frac{\gradient p}{\rho}\tag{1.78}
+$$
+
+### 1.7.3 Viscosity（黏度）
+
+​		第三个力是粘性。我们在之前的mass spring例子中已经看到了。从仿真结果可以看出，阻尼力的作用是尽量减小两点之间的速度差。**粘性力是同一种力**。正是这种力量使蜂蜜变得粘稠，并让它以不同的方式与水等粘性较低的液体流动。
+
+​		想象一下，我们正试图用一根细吸管搅拌一种粘稠的稳态流体，以便在流体中的某一点产生一个峰值速度。现在附近的每一个点都是稳定的，我们可以看到我们搅拌的点和它旁边的点之间的速度差。粘性力开始发挥作用，试图减少点之间的速度差。结果，搅拌点的速度向周围扩散。因此，施加粘度力就像模糊了速度场。
+
+​		幸运的是，我们已经知道如何“模糊”一个域。如果您回想一下1.3.5.5节中的拉普拉斯算子，将拉普拉斯算子添加到原始字段中等于模糊了字段。所以我们可以用这个算子来定义粘性力，这样:
+
+ps:拉普拉斯算子是模糊还是锐化取决于是加还是减，加拉普拉斯算符是模糊，减拉普拉斯算子是锐化。
+
+​		**拉普拉斯算子是梯度的散度，如果散度高，说明这里的东西都流走了，如果不想让他流走，就可以吧拉普拉斯算子加在原本的地方上。**
+
+​		所以+拉普拉斯算子是模糊
+
+[参考链接：Laplacian intuition](https://www.youtube.com/watch?v=EW08rD-GFh0)
+
